# contract_hub

./: .gitignore  README.md  contract_hub.py  pyproject.toml
notebooks/: contract_hub.ipynb
src/: main.py
src/services/answer_generation/: answer_generation.py
src/services/chunking/: chunker.py
src/services/data_extraction/: extract_data.py
src/services/embeddings/: embeddings.py
src/services/prompt_engineering/: prompt_engineering.py
src/services/similarity_search/: similarity_search.py
